fix chat line overflow

--- a/webroot/css/logs.css
+++ b/webroot/css/logs.css
@@ -173,6 +173,7 @@ input {
     padding-left: 10px;
     display: table-cell;
     white-space: pre-wrap;
+    overflow-wrap: anywhere;
     width: 100%;
 }
 
